[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/NetworkSetup.gd" type="Script" id=2]
[ext_resource path="res://scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://scenes/RtsCameralController.tscn" type="PackedScene" id=4]

[node name="Main" type="Spatial"]
script = ExtResource( 3 )

[node name="Game" parent="." instance=ExtResource( 1 )]

[node name="fps" type="Label" parent="."]
margin_left = 18.0
margin_top = 14.0
margin_right = 106.0
margin_bottom = 54.0
text = "fps:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NetworkSetup" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NetworkSetup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -164.0
margin_top = -71.0
margin_right = 160.0
margin_bottom = 81.0
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="name" type="LineEdit" parent="NetworkSetup/VBoxContainer"]
margin_right = 324.0
margin_bottom = 24.0
align = 1
placeholder_text = "Name"
caret_blink = true
caret_blink_speed = 0.5

[node name="Host_button" type="Button" parent="NetworkSetup/VBoxContainer"]
margin_top = 28.0
margin_right = 324.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 554, 203 )
text = "Host"

[node name="Join_button" type="Button" parent="NetworkSetup/VBoxContainer"]
margin_top = 92.0
margin_right = 324.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 60 )
text = "Join"

[node name="RtsCameralController" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.84464, 0 )

[node name="EndGame_button" type="Button" parent="."]
margin_left = 956.0
margin_right = 1280.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 554, 203 )
text = "End Game"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="NetworkSetup/VBoxContainer/name" to="NetworkSetup" method="_on_ip_address_text_changed"]
[connection signal="pressed" from="NetworkSetup/VBoxContainer/Host_button" to="NetworkSetup" method="_on_Host_button_pressed"]
[connection signal="pressed" from="NetworkSetup/VBoxContainer/Join_button" to="NetworkSetup" method="_on_Join_button_pressed"]
[connection signal="pressed" from="EndGame_button" to="." method="_on_EndGame_button_pressed"]
